feat: snippets fully working
