# internal/api/ctl/proto.gen.go
@@ -1,4 +1,4 @@
-// forester-controller v0.0.1 65cc83ef763c38b9168ac8fc19d96c3b38cb9293
+// forester-controller v0.0.1 de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8
 // --
 // Code generated by webrpc-gen@v0.14.0-dev with golang generator. DO NOT EDIT.
 //
@@ -30,7 +30,7 @@ func WebRPCSchemaVersion() string {
 
 // Schema hash generated from your RIDL schema
 func WebRPCSchemaHash() string {
-	return "65cc83ef763c38b9168ac8fc19d96c3b38cb9293"
+	return "de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8"
 }
 
 //
@@ -96,11 +96,12 @@ type ApplianceService interface {
 type SystemService interface {
 	Register(ctx context.Context, system *NewSystem) error
 	Find(ctx context.Context, pattern string) (*System, error)
-	Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string) error
+	Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string) error
 	Release(ctx context.Context, systemPattern string) error
 	List(ctx context.Context, limit int64, offset int64) ([]*System, error)
 	BootNetwork(ctx context.Context, systemPattern string) error
 	BootLocal(ctx context.Context, systemPattern string) error
+	Kickstart(ctx context.Context, systemPattern string) (string, error)
 }
 
 type SnippetService interface {
@@ -134,6 +135,7 @@ var WebRPCServices = map[string][]string{
 		"List",
 		"BootNetwork",
 		"BootLocal",
+		"Kickstart",
 	},
 	"SnippetService": {
 		"Create",
@@ -747,6 +749,8 @@ func (s *systemServiceServer) ServeHTTP(w http.ResponseWriter, r *http.Request) 
 		handler = s.serveBootNetworkJSON
 	case "/rpc/SystemService/BootLocal":
 		handler = s.serveBootLocalJSON
+	case "/rpc/SystemService/Kickstart":
+		handler = s.serveKickstartJSON
 	default:
 		err := ErrWebrpcBadRoute.WithCause(fmt.Errorf("no handler for path %q", r.URL.Path))
 		s.sendErrorJSON(w, r, err)
@@ -863,9 +867,10 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 	defer r.Body.Close()
 
 	reqPayload := struct {
-		Arg0 string `json:"systemPattern"`
-		Arg1 string `json:"imagePattern"`
-		Arg2 string `json:"comment"`
+		Arg0 string   `json:"systemPattern"`
+		Arg1 string   `json:"imagePattern"`
+		Arg2 string   `json:"comment"`
+		Arg3 []string `json:"snippets"`
 	}{}
 	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
 		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
@@ -873,7 +878,7 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 	}
 
 	// Call service method implementation.
-	err = s.SystemService.Acquire(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2)
+	err = s.SystemService.Acquire(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2, reqPayload.Arg3)
 	if err != nil {
 		rpcErr, ok := err.(WebRPCError)
 		if !ok {
@@ -1032,6 +1037,49 @@ func (s *systemServiceServer) serveBootLocalJSON(ctx context.Context, w http.Res
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte("{}"))
+}
+
+func (s *systemServiceServer) serveKickstartJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+	ctx = context.WithValue(ctx, MethodNameCtxKey, "Kickstart")
+
+	reqBody, err := io.ReadAll(r.Body)
+	if err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to read request data: %w", err)))
+		return
+	}
+	defer r.Body.Close()
+
+	reqPayload := struct {
+		Arg0 string `json:"systemPattern"`
+	}{}
+	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
+		return
+	}
+
+	// Call service method implementation.
+	ret0, err := s.SystemService.Kickstart(ctx, reqPayload.Arg0)
+	if err != nil {
+		rpcErr, ok := err.(WebRPCError)
+		if !ok {
+			rpcErr = ErrWebrpcEndpoint.WithCause(err)
+		}
+		s.sendErrorJSON(w, r, rpcErr)
+		return
+	}
+
+	respPayload := struct {
+		Ret0 string `json:"contents"`
+	}{ret0}
+	respBody, err := json.Marshal(respPayload)
+	if err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadResponse.WithCause(fmt.Errorf("failed to marshal json response: %w", err)))
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(respBody)
 }
 
 func (s *systemServiceServer) sendErrorJSON(w http.ResponseWriter, r *http.Request, rpcErr WebRPCError) {
@@ -1488,12 +1536,12 @@ func (c *applianceServiceClient) Delete(ctx context.Context, name string) error 
 
 type systemServiceClient struct {
 	client HTTPClient
-	urls   [7]string
+	urls   [8]string
 }
 
 func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 	prefix := urlBase(addr) + SystemServicePathPrefix
-	urls := [7]string{
+	urls := [8]string{
 		prefix + "Register",
 		prefix + "Find",
 		prefix + "Acquire",
@@ -1501,6 +1549,7 @@ func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 		prefix + "List",
 		prefix + "BootNetwork",
 		prefix + "BootLocal",
+		prefix + "Kickstart",
 	}
 	return &systemServiceClient{
 		client: client,
@@ -1528,12 +1577,13 @@ func (c *systemServiceClient) Find(ctx context.Context, pattern string) (*System
 	return out.Ret0, err
 }
 
-func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string) error {
+func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string) error {
 	in := struct {
-		Arg0 string `json:"systemPattern"`
-		Arg1 string `json:"imagePattern"`
-		Arg2 string `json:"comment"`
-	}{systemPattern, imagePattern, comment}
+		Arg0 string   `json:"systemPattern"`
+		Arg1 string   `json:"imagePattern"`
+		Arg2 string   `json:"comment"`
+		Arg3 []string `json:"snippets"`
+	}{systemPattern, imagePattern, comment, snippets}
 	err := doJSONRequest(ctx, c.client, c.urls[2], in, nil)
 	return err
 }
@@ -1573,6 +1623,18 @@ func (c *systemServiceClient) BootLocal(ctx context.Context, systemPattern strin
 	}{systemPattern}
 	err := doJSONRequest(ctx, c.client, c.urls[6], in, nil)
 	return err
+}
+
+func (c *systemServiceClient) Kickstart(ctx context.Context, systemPattern string) (string, error) {
+	in := struct {
+		Arg0 string `json:"systemPattern"`
+	}{systemPattern}
+	out := struct {
+		Ret0 string `json:"contents"`
+	}{}
+
+	err := doJSONRequest(ctx, c.client, c.urls[7], in, &out)
+	return out.Ret0, err
 }
 
 type snippetServiceClient struct {
