# openapi.gen.yaml
@@ -1,4 +1,4 @@
-# forester-controller v0.0.1 65cc83ef763c38b9168ac8fc19d96c3b38cb9293
+# forester-controller v0.0.1 de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8
 # --
 # Code generated by webrpc-gen@v0.14.0-dev with github.com/webrpc/gen-openapi@v0.11.1 generator; DO NOT EDIT
 # 
@@ -419,6 +419,11 @@ components:
           type: string
         comment:
           type: string
+        snippets:
+          type: array
+          description: '[]string'
+          items:
+            type: string
     Release_Request:
       type: object
       properties:
@@ -437,6 +442,11 @@ components:
         systemPattern:
           type: string
     BootLocal_Request:
+      type: object
+      properties:
+        systemPattern:
+          type: string
+    Kickstart_Request:
       type: object
       properties:
         systemPattern:
@@ -466,6 +476,11 @@ components:
       type: object
     BootLocal_Response:
       type: object
+    Kickstart_Response:
+      type: object
+      properties:
+        contents:
+          type: string
     Create_Request:
       type: object
       properties:
@@ -1080,6 +1095,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BootLocal_Response'
+        '4XX':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcEndpoint'
+                - $ref: '#/components/schemas/ErrorWebrpcRequestFailed'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRoute'
+                - $ref: '#/components/schemas/ErrorWebrpcBadMethod'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRequest'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcBadResponse'
+                - $ref: '#/components/schemas/ErrorWebrpcServerPanic'
+                - $ref: '#/components/schemas/ErrorWebrpcInternalError'
+  /rpc/SystemService/Kickstart:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Kickstart_Request'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Kickstart_Response'
         '4XX':
           description: Client error
           content:
